@@ -16,6 +16,7 @@ AC_MSG_RESULT(MySQL header files are in $MYSQLINCDIR)
 AC_MSG_RESULT(MySQL library files are in $MYSQLLIBDIR)
 AC_SUBST(MYSQLINCDIR)
 AC_SUBST(MYSQLLIBDIR)
+AC_CHECK_FILE(/dev/random, [AC_DEFINE(HAVE_DEV_RANDOM)])
 
 ac_cv_warnings=yes
 AC_ARG_ENABLE(warnings, [  --disable-warnings	Turn of GCC compiler warnings ],
